fix: enum mapping for role